--- a/src/main/webapp/dashboard/legal/search.xhtml
+++ b/src/main/webapp/dashboard/legal/search.xhtml
@@ -86,6 +86,7 @@ Email: info@dpbennett.com.jm
         <p:toolbar>
             <p:toolbarGroup align="right" >
                 <p:inputText value="#{legalDocumentManager.searchText}"  
+                             id="searchText"
                              style="width: 50%;" />
 
                 <p:spacer width="5" />
