--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -179,7 +179,7 @@ Email: info@dpbennett.com.jm
                         title="This is the default button that accepts the enter key press" 
                         onstart="PF('longProcessDialogVar').show();"                                 
                         oncomplete="PF('longProcessDialogVar').hide();"
-                        actionListener="#{systemManager.doDefaultSearch}"
+                        actionListener="#{legalDocumentManager.doDefaultSearch}"
                         process="@form"/>                    
 
                     <p:defaultCommand id="dashboardDefaultCommandButton" 
