--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,6 +1,6 @@
 <!--
-Job Management & Tracking System (JMTS) 
-Copyright (C) 2017  D P Bennett & Associates Limited
+Job Management & Tracking System (JMTS)  
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -20,11 +20,11 @@ Email: info@dpbennett.com.jm
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
     xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://java.sun.com/jsf/html" 
+    xmlns:h="http://xmlns.jcp.org/jsf/html" 
     xmlns:p="http://primefaces.org/ui"
-    xmlns:f="http://java.sun.com/jsf/core"
     xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"> 
+    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+    xmlns:f="http://java.sun.com/jsf/core"> 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />    
         <meta http-equiv="cache-control" content="max-age=0" />
@@ -33,189 +33,178 @@ Email: info@dpbennett.com.jm
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
         <title>#{legalDocumentManager.applicationHeader}</title>        
-        <script type="text/javascript" src="js/jmtsJavascript.js" />   
+        <script type="text/javascript" src="js/javascripts.js" />  
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="shortcut icon" type="image/x-icon" href="#{systemManager.appShortcutIconURL}" />
+        <style type="text/css">
+
+            .ui-widget {
+                font-size: 0.975em !important;
+            }
+
+            .lightgreybg {
+                background-color:lightgrey !important;
+                background-image: none !important;
+                color: #000000 !important;
+            }
+            .lightgreenbg {
+                background-color:lightgreen !important;
+                background-image: none !important;
+                color: #000000 !important;
+            }
+            .orangeredbg {
+                background-color:orangered !important;
+                background-image: none !important;
+                color: #000000 !important;
+            }
+            .yellowbg {
+                background-color:yellow !important;
+                background-image: none !important;
+                color: #000000 !important;
+            }
+
+        </style>
     </h:head>
-    <h:body onload="checkWhichBrowser();
-            PF('longProcessDialogVar').hide();
-            mainTabViewVar.select(0);" >
-        
-        <ui:include src="common/commonDialogs.xhtml" />   
-        <ui:include src="admin/loginDialog.xhtml"/>
-        <ui:include src="common/generalAlertDialogs.xhtml"/>
-        <ui:include src="common/longProcessDialog.xhtml"/>   
-        <ui:include src="common/preferencesDialog.xhtml"/>   
+    <h:body>
 
-        <p:layout id="JMTSWeb" fullPage="true" widgetVar="layoutVar" >
-            <p:ajax event="toggle" listener="#{systemManager.handleLayoutUnitToggle}" />
+        <ui:include src="common/commonDialogs.xhtml" />
+        <ui:include src="admin/loginDialog.xhtml"/>  
+        <ui:include src="common/userProfileDialog.xhtml"/>  
+        <h:form id="appForm">          
+            <p:splitter layout="vertical" rendered="#{systemManager.renderUserMenu()}">
+                <p:splitterPanel size="100" >
 
-            <p:layoutUnit position="north" 
-                          rendered="true" 
-                          header=""
-                          style="border: 0;" 
-                          size="75" >
-                <h:form id="headerForm">   
-                    <p:growl id="growl3" life="5000" showDetail="true" />
-                    <h:panelGrid rendered="#{systemManager.renderUserMenu()}" width="100%" 
-                                 border="0" columns="3" >
-                        <p:graphicImage value="images/BSJ Logo - H41.png"/>
-                        <h:panelGrid columns="1">   
+                    <p:splitterPanel styleClass="p-d-flex p-ai-center p-jc-center" 
+                                     size="20" minSize="20">
 
-                            <h:outputText value="#{legalDocumentManager.applicationHeader}"
-                                          style="color: darkgrey; font-size: 14pt; font-weight: bold;" />
+                        <p:growl id="growl3" life="5000" showDetail="true" />
 
-                            <h:outputText value="#{systemManager.applicationSubheader}"
-                                          styleClass="#{systemManager.isDebugMode eq true ? 'debug-mode' : 'non-debug-mode'}" />  
+                        <h:panelGrid columns="1" border="0" width="100%" >
+                            <h:panelGrid width="100%" 
+                                         border="0" columns="3" >
+
+                                <p:graphicImage value="#{systemManager.logoURL}"
+                                                height="#{systemManager.logoURLImageHeight}" 
+                                                width="#{systemManager.logoURLImageWidth}"/>
+
+                                <h:panelGrid columns="1">   
+
+                                    <h:outputText value="#{legalDocumentManager.applicationHeader}"
+                                                  style="color: darkgrey; font-size: 14pt; font-weight: bold;" />
+
+                                    <h:outputText value="#{systemManager.applicationSubheader}"
+                                                  styleClass="#{systemManager.isDebugMode eq true ? 'debug-mode' : 'non-debug-mode'}" />  
+
+                                </h:panelGrid>
+                                <h:panelGroup>
+                                    <p:menuButton     
+                                        iconPos="left"
+                                        icon="pi pi-user"
+                                        title="#{systemManager.user.employee.firstName} #{systemManager.user.employee.lastName} (#{systemManager.user.username})"
+                                        id="userMenu"
+                                        style="float: right;margin-right: 15px;" >
+
+                                        <p:menuitem actionListener="#{systemManager.viewUserProfile}"                                            
+                                                    update=":userProfileDialogForm"
+                                                    oncomplete="PF('userProfileDialog').show();"
+                                                    icon="pi pi-cog"
+                                                    value="Profile"
+                                                    process="@this"/>
+                                        <p:separator />  
+                                        <p:menuitem actionListener="#{systemManager.logout}"                                             
+                                                    icon="pi pi-sign-out"
+                                                    value="Logout"
+                                                    process="@this"/>    
+
+                                    </p:menuButton>   
+                                </h:panelGroup>
+                            </h:panelGrid> 
 
                         </h:panelGrid>
-                        <p:menuButton value="#{systemManager.user.employee.firstName} #{systemManager.user.employee.lastName}"     
-                                      iconPos="left"
-                                      id="userMenu"
-                                      style="float: right;" >
+                    </p:splitterPanel>                          
 
-                            <p:menuitem actionListener="#{systemManager.editPreferences}"
-                                        onstart="PF('longProcessDialogVar').show();"
-                                        update=":preferencesDialogForm"
-                                        oncomplete="PF('longProcessDialogVar').hide();PF('preferencesDialog').show();"
-                                        onerror="PF('connectionErrorDialog').show();"    
-                                        value="Preferences"
-                                        process="@this"/>  
+                </p:splitterPanel>
+                <p:splitterPanel>
+                    <p:splitter>
+                        <p:splitterPanel styleClass="p-d-flex p-ai-center p-jc-center" 
+                                         size="30" minSize="0">
+                            <p:panel header="Dashboard">
+                                <p:commandButton
+                                    id="doGeneralSearchButton"
+                                    style="visibility: hidden;"
+                                    global="false"                                        
+                                    value=""  
+                                    update=":appForm:growl3"
+                                    title="This is the default button that accepts the enter key press" 
+                                    actionListener="#{systemManager.doDefaultSearch}"
+                                    process="@form"/>                    
 
-                            <p:separator />
+                                <p:defaultCommand id="dashboardDefaultCommandButton" 
+                                                  target="doGeneralSearchButton" />
 
-                            <p:menuitem actionListener="#{systemManager.logout}"
-                                        onstart="PF('longProcessDialogVar').show();"                                               
-                                        onerror="PF('connectionErrorDialog').show();"                                              
-                                        icon="ui-icon-circle-arrow-w"
-                                        value="Logout"
-                                        process="@this"/>    
-
-                        </p:menuButton>   
-
-                    </h:panelGrid>
-
-                    <p:remoteCommand name="updateHeaderForm"
-                                     update="headerForm"
-                                     process="@this"/>
-
-
-                    <p:remoteCommand name="keepAliveRequest"
-                                     actionListener="#{systemManager.handleKeepAlive}"
-                                     onerror="PF('connectionErrorDialog').show();"
-                                     update="@this"
-                                     process="@this"/>
-
-                </h:form>
-            </p:layoutUnit>
-
-            <p:layoutUnit id="centreLayoutUnit"                           
-                          position="center">
-
-                <h:form id="mainTabViewForm">   
-
-                    <p:tabView id="mainTabView"   
-                               rendered="#{systemManager.mainTabView.render}"
-                               value="#{systemManager.mainTabView.tabs}" 
-                               var="t"         
-                               style="border-width: 0px;"
-                               onTabShow="PF('longProcessDialogVar').hide();"
-                               widgetVar="mainTabViewVar">
-
-                        <p:ajax event="tabClose" 
-                                immediate="true"
-                                process="@this"
-                                update=":headerForm:growl3"
-                                listener="#{systemManager.onMainViewTabClose}" />  
-
-                        <p:ajax event="tabChange" 
-                                immediate="true"
-                                process="@this"                                
-                                listener="#{systemManager.onMainViewTabChange}" />  
-
-
-                        <p:tab title="#{t.name}" closable="true"  >
-
-                            <h:panelGroup rendered="#{t.id == 'Document Browser'}">                                
-                                <ui:include src="legal/documentBrowser.xhtml" />   
-                            </h:panelGroup>                             
-                            <h:panelGroup rendered="#{t.id == 'System Administration'}" >
-                                <ui:include src="admin/generalAdminTab.xhtml" /> 
-                            </h:panelGroup> 
-                            <h:panelGroup rendered="#{t.id == 'Reports'}" >
-                                <ui:include src="report/reportsTab.xhtml" />                                                                
-                            </h:panelGroup>
-                        </p:tab>
-                    </p:tabView>
-
-                    <p:commandButton
-                        id="doNothingButton"
-                        style="visibility: hidden;"
-                        global="false"                                        
-                        value=""                                       
-                        title="This is the default button that accepts the enter key press"                                       
-                        process="@this"/> 
-
-                    <p:defaultCommand target=":mainTabViewForm:doNothingButton" />
-
-                </h:form>
-            </p:layoutUnit>
-
-            <p:layoutUnit
-                id="dashboard"    
-                position="west" 
-                size="375"
-                header="Dashboard"
-                resizable="true"                  
-                collapsed="#{systemManager.westLayoutUnitCollapsed}"
-                collapsible="true">   
-                <h:form id="dashboardForm" > 
-
-                    <p:commandButton
-                        id="doGeneralSearchButton"
-                        style="visibility: hidden;"
-                        global="false"                                        
-                        value=""  
-                        update=":headerForm:growl3"
-                        title="This is the default button that accepts the enter key press" 
-                        onstart="PF('longProcessDialogVar').show();"                                 
-                        oncomplete="PF('longProcessDialogVar').hide();"
-                        actionListener="#{legalDocumentManager.doDefaultSearch}"
-                        process="@form"/>                    
-
-                    <p:defaultCommand id="dashboardDefaultCommandButton" 
-                                      target="doGeneralSearchButton" />
-
-                    <p:accordionPanel id="dashboardAccordion" 
-                                      value="#{systemManager.dashboard.tabs}" 
-                                      var="t" 
-                                      widgetVar="dashboardAccordionVar"
-                                      rendered="#{systemManager.dashboard.render}"
-                                      multiple="false">
-
-                        <p:ajax event="tabChange"       
-                                immediate="true"
-                                process="@this"
-                                listener="#{systemManager.onDashboardTabChange}" />
-
-                        <p:tab title="#{t.name}" > 
-
-                            <h:panelGroup rendered="#{t.id == 'Legal Office'}">                               
                                 <ui:include src="dashboard/legal/documentsTab.xhtml" />
-                            </h:panelGroup>                             
 
-                            <h:panelGroup rendered="#{t.id == 'System Administration'}">
-                                <ui:include src="dashboard/admin/generalAdminTab.xhtml" />
-                            </h:panelGroup>
+                            </p:panel>
+                        </p:splitterPanel>     
+                        <p:splitterPanel styleClass="p-d-flex p-ai-center p-jc-center" 
+                                         size="70" minSize="65">
 
-                        </p:tab>   
+                            <p:tabView id="mainTabView"   
+                                       rendered="#{systemManager.mainTabView.render}"
+                                       value="#{systemManager.mainTabView.tabs}" 
+                                       var="t"         
+                                       style="border-width: 0px;"
 
-                    </p:accordionPanel>      
+                                       widgetVar="mainTabViewVar">
+
+                                <p:ajax event="tabClose" 
+                                        immediate="true"
+                                        global="true"
+                                        process="@this"
+                                        update=""
+                                        listener="#{systemManager.onMainViewTabClose}" />  
+
+                                <p:ajax event="tabChange" 
+                                        immediate="true"
+                                        global="true"
+                                        process="@this"                                
+                                        listener="#{systemManager.onMainViewTabChange}" />  
 
 
-                </h:form>
-            </p:layoutUnit>
+                                <p:tab title="#{t.name}" closable="true"  >
 
-        </p:layout>
+                                    <h:panelGroup rendered="#{t.id == 'Document Browser'}">                                
+                                        <ui:include src="legal/documentBrowser.xhtml" />   
+                                    </h:panelGroup>                             
+                                    <h:panelGroup rendered="#{t.id == 'System Administration'}" >
+                                        <ui:include src="admin/generalAdminTab.xhtml" /> 
+                                    </h:panelGroup> 
+                                    <h:panelGroup rendered="#{t.id == 'Reports'}" >
+                                        <ui:include src="report/reportsTab.xhtml" />                                                                
+                                    </h:panelGroup>
+
+                                </p:tab>
+
+                            </p:tabView> 
+
+                            <p:commandButton
+                                id="doNothingButton"
+                                style="visibility: hidden;"
+                                global="false"                                        
+                                value=""                                       
+                                title="This is the default button that accepts the enter key press"                                       
+                                process="@this"/> 
+
+                            <p:defaultCommand target=":appForm:doNothingButton" />
+                        </p:splitterPanel>
+                    </p:splitter>
+                </p:splitterPanel>
+            </p:splitter>
+
+            <p:poll interval="60" 
+                    global="false"
+                    listener="#{systemManager.handleKeepAlive}" />
+        </h:form>
     </h:body>
 </html>
 
