--- a/src/main/webapp/dashboard/legal/search.xhtml
+++ b/src/main/webapp/dashboard/legal/search.xhtml
@@ -1,6 +1,6 @@
 <!--
-Job Management & Tracking System (JMTS) 
-Copyright (C) 2017  D P Bennett & Associates Limited
+Legal Office (LO) 
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -92,12 +92,8 @@ Email: info@dpbennett.com.jm
                 <p:spacer width="5" />
                 <p:commandButton value="Search"
                                  id="legalDocumentSearchButton"
-                                 onstart="PF('longProcessDialogVar').show();"
                                  actionListener="#{legalDocumentManager.doSearch}"
-                                 oncomplete="PF('longProcessDialogVar').hide();"
-                                 onerror="PF('connectionErrorDialog').show();"
-                                 update=":headerForm:growl3"
-                                 icon="ui-icon-search"
+                                 icon="pi pi-search"
                                  process="@form"/>
             </p:toolbarGroup>
         </p:toolbar>
