--- a/src/main/webapp/legal/documentReports.xhtml
+++ b/src/main/webapp/legal/documentReports.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Job Management & Tracking System (JMTS) 
-Copyright (C) 2017  D P Bennett & Associates Limited
+Legal Office (LO) 
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -63,7 +63,7 @@ Email: info@dpbennett.com.jm
             </f:facet>
             <p:commandButton update=":typeGroupDialogForm:documentSubReportTable"
                              oncomplete="typeGroupDialog.show();"
-                             icon="ui-icon-search"
+                             icon="pi pi-search"
                              title="View table of documents">
                 <f:setPropertyActionListener value="#{document}" target="#{legalDocumentManager.selectedDocument}" />
             </p:commandButton>
