--- a/src/main/webapp/legal/documentBrowserToolbar.xhtml
+++ b/src/main/webapp/legal/documentBrowserToolbar.xhtml
@@ -1,6 +1,6 @@
 <!--
-Job Management & Tracking System (JMTS) 
-Copyright (C) 2017  D P Bennett & Associates Limited
+Legal Office (LO) 
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -28,15 +28,11 @@ Email: info@dpbennett.com.jm
             <ui:remove>
                 <p:commandButton value="New"
                                  actionListener="#{legalDocumentManager.createNewLegalDocument}"
-                                 onstart="PF('longProcessDialogVar').show();"                 
-                                 oncomplete="PF('longProcessDialogVar').hide();"
-                                 onerror="PF('connectionErrorDialog').show();"
                                  title="Add a new document"
-                                 icon="ui-icon ui-icon-plus"
+                                 icon="pi pi-plus"
                                  process="@this" >
 
                     <p:ajax event="dialogReturn" 
-                            update=":mainTabViewForm:mainTabView,:headerForm:growl3"
                             listener="#{legalDocumentManager.documentDialogReturn}" />
 
                 </p:commandButton>
@@ -44,35 +40,26 @@ Email: info@dpbennett.com.jm
             <p:menuButton value="New">   
                 <p:menuitem
                     actionListener="#{legalDocumentManager.createNewLegalDocument}"
-                    onstart="PF('longProcessDialogVar').show();"                 
-                    oncomplete="PF('longProcessDialogVar').hide();"
-                    onerror="PF('connectionErrorDialog').show();"
-                    value="Document"       
-                    update="headerForm:growl3"
+                    value="Document" 
                     title="Add a new document"
-                    icon="ui-icon-plus"
+                    icon="pi pi-plus"
                     process="@this" >
 
                     <p:ajax event="dialogReturn" 
-                            update=":mainTabViewForm:mainTabView,:headerForm:growl3"
                             listener="#{legalDocumentManager.documentDialogReturn}" />
 
                 </p:menuitem>
 
                 <p:menuitem  
                     value="Document type"
-                    icon="ui-icon-plus" 
-                    onstart="PF('longProcessDialogVar').show();" 
-                    oncomplete="PF('longProcessDialogVar').hide();"
+                    icon="pi pi-plus"
                     actionListener="#{legalDocumentManager.createNewDocumentType}"                                            
                     process="@this"
                     title="Add a new document type" />
 
                 <p:menuitem  
                     value="Classification"
-                    icon="ui-icon-plus" 
-                    onstart="PF('longProcessDialogVar').show();" 
-                    oncomplete="PF('longProcessDialogVar').hide();"
+                    icon="pi pi-plus" 
                     actionListener="#{legalDocumentManager.createNewClassification}"                                            
                     process="@this"
                     title="Add a new classification" />
