--- a/src/main/webapp/legal/legalDocumentDeleteConfirmDialog.xhtml
+++ b/src/main/webapp/legal/legalDocumentDeleteConfirmDialog.xhtml
@@ -1,6 +1,6 @@
 <!--
 Legal Office (LO) 
-Copyright (C) 2017  D P Bennett & Associates Limited
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -42,12 +42,12 @@ Email: info@dpbennett.com.jm
                     <h:panelGroup >                        
                         <p:commandButton value="Yes"      
                                          actionListener="#{legalDocumentManager.deleteDocument}" 
-                                         icon="ui-icon ui-icon-check"
+                                         icon="pi pi-check"
                                          process="@this"/>
                         <p:spacer height="0" width="5"/>
                         <p:commandButton value="No"
                                          actionListener="#{legalDocumentManager.closeDialog}" 
-                                         icon="ui-icon-close"/>   
+                                         icon="pi pi-close"/>   
                     </h:panelGroup>
                 </h:panelGrid>
             </p:panel>
