--- a/src/main/webapp/legal/legalDocumentDialogToolbar.xhtml
+++ b/src/main/webapp/legal/legalDocumentDialogToolbar.xhtml
@@ -1,6 +1,6 @@
 <!--
-Job Management & Tracking System (JMTS) 
-Copyright (C) 2017  D P Bennett & Associates Limited
+Legal Office (LO) 
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -28,16 +28,14 @@ Email: info@dpbennett.com.jm
                              actionListener="#{legalDocumentManager.saveCurrentLegalDocument}"
                              update="document_dialog_growl"
                              title="Save and close"
-                             onstart="PF('longProcessDialogVar').show();"  
-                             oncomplete="PF('longProcessDialogVar').hide();"
-                             icon="ui-icon ui-icon-check"
+                             icon="pi pi-check"
                              process="@form"/>
             <p:spacer width="10" />
             <p:commandButton value="Cancel"
                              actionListener="#{legalDocumentManager.cancelDocumentEdit}"
                              title="Cancel edit and close"
                              process="@this"
-                             icon="ui-icon ui-icon-close" />
+                             icon="pi pi-times" />
 
         </p:toolbarGroup>
     </p:toolbar>
