--- a/src/main/webapp/legal/typeGroupDialogToolbar.xhtml
+++ b/src/main/webapp/legal/typeGroupDialogToolbar.xhtml
@@ -1,6 +1,6 @@
 <!--
-Job Management & Tracking System (JMTS) 
-Copyright (C) 2017  D P Bennett & Associates Limited
+Legal Office (LO) 
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -26,7 +26,7 @@ Email: info@dpbennett.com.jm
         <p:toolbarGroup align="left">
             <p:commandButton onclick="typeGroupDialog.hide();"
                              value="Close"
-                             icon="ui-icon-close"/>
+                             icon="pi pi-times"/>
             <p:spacer width="10" />
             <p:commandButton value="Export" ajax="false" title="Export to Excel">
                 <p:dataExporter type="xls" target="documentSubReportTable" fileName="documents"
